horizontal scrolling w. fixed column

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -135,7 +135,8 @@ td {padding-right: 1em;}
 b {font-weight: bold}
 .typing input {width: 2em}
 .typing td {padding: 0px;}
-.typing {margin-top: 5px;}
+.typingwrapper {width: 600px; overflow-x:scroll; margin-top: 5px; margin-left:10em; overflow-y:visible; padding-bottom:1px;}
+.headcol { position:absolute; width:10em; left:0; top:auto;}
 .centeredVertical {width: 15em; margin-left: auto; margin-right: auto; display: block; margin-top: 1em;}
 .centeredVerticalWide {width: 22em; margin-left: auto; margin-right: auto; display: block; margin-top: 1em;}
 #connections {margin-right: 20px; float: left; height: 450px; min-width: 140px; padding: 3px; overflow: auto; border: solid #CCCCCC 1px; margin-bottom: 5px;}
@@ -233,7 +234,7 @@ h4 { font-size: larger; text-align: center;}
 .mandates {border: groove #D94B31 5px; margin: 10px; font-size: larger; padding: 10px;}
 .conn_tbl {width: 100%;}
 .conn_tbl td {padding-right: 0px;}
-
+.navigation_current {display: none;}
 
 
 
